--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercicio</title>
+    <style>
+        body{
+            background-color: black;
+            color: white;
+            font: normal 20pt Arial; 
+        }
+    </style>
+
+      
+
 </head>
 <body>
     <h1>Meu primeiro diretorio!</h1> 
