--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
             color: white;
             font: normal 20pt Arial; 
         }
-    </style>
-
-      
+    </style> 
 
 </head>
 <body>
     <h1>Meu primeiro diretorio!</h1> 
-    <p>Olá Meu nome e Jailton!</p>
-</body>
+    <p>Olá Meu nome e Jailton!</p> 
+</body>  
+<script>
+   var nome = window.prompt("Qual seu nome?") 
+              document.write('Seja bem vindo, ' + nome)                 
+</script> 
 </html>
