--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 </body>  
 <script>
    var nome = window.prompt("Qual seu nome?") 
-              document.write('Seja bem vindo, ' + nome)                 
-</script> 
+              document.write("Seja bem vindo, " + nome )  
+    var n1 = Number(window.prompt("Digie o primeiro valor")) 
+    var n2 = Number(window.prompt(" Digite o segundo valor")) 
+    var s = n1 + n2 
+              document.write(` A soma de  ${n1} + ${n2}  =  ${s}`) 
+</script>  
 </html>
