--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <p>Olá Meu nome e Jailton!</p> 
 </body>  
 <script>
-   var nome = window.prompt("Qual seu nome?") 
+   var nome = prompt("Qual seu nome?") 
               document.write("Seja bem vindo, " + nome )  
-    var n1 = Number(window.prompt("Digie o primeiro valor")) 
-    var n2 = Number(window.prompt(" Digite o segundo valor")) 
+    var n1 = Number(prompt("Digie o primeiro valor")) 
+    var n2 = Number(prompt(" Digite o segundo valor")) 
     var s = n1 + n2 
               document.write(` A soma de  ${n1} + ${n2}  =  ${s}`) 
 </script>  
